[package]
name = "lux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "luxlib"
path = "src/lib.rs"

[[bin]]
name = "lux"
path = "src/bin.rs"

[dependencies]
clap = "4.3.0"
toml = "0.7.4"
serde = "1.0.164"
colored = "2"
regex = "1.8.0"
serde_derive = "1.0.164"
lazy_static = "1.4.0"
crossterm = "0.26.1"
